fix: font wieght

--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@
 @import url("./style/fonts.css");
 @import url("./style/common.css");
 
-@import url("./style/desktop/desktop.css") (max-width: 1920px) and (min-width: 1080px);
+@import url("./style/desktop/desktop.css") (min-width: 1080px);
 @import url("./style/tablet/tablet.css") (max-width: 1079px) and (min-width: 321px);
-@import url("./style/mobile/mobile.css")  (max-width: 320px);
+@import url("./style/mobile/mobile.css") (max-width: 320px);
