--- a/style/tablet/tablet_banner-parts.css
+++ b/style/tablet/tablet_banner-parts.css
@@ -30,7 +30,8 @@
 .banner-parts__title div {
     display: flex;
     flex-direction: column;
-    margin: 3vw;
+    margin-top: 3vw;
+    /* margin: 3vw; */
     font-size: 5vw;
     font-weight: 700;
 }
