--- a/style/tablet/tablet_parts.css
+++ b/style/tablet/tablet_parts.css
@@ -5,14 +5,17 @@
     flex-direction: column;
     justify-content: space-between;
     margin-top: 20vw;
+    padding-left: 2vw;
 }
 
 .parts__title {
-    width: 70%;
+    width: 100%;
     font-size: 5vw;
+    font-weight: 700;
     color: #3223BE;
     position: relative;
     margin-bottom: 3vw;
+    /* background-color: yellowgreen; */
 }
 
 .parts__title span {}
